# FELIXwrapper

./: CMakeLists.txt  README.md
include/: BarInterface.h  CardInterface.h
include/FELIXwrapper/: BarInterface.h  CardInterface.h  registers.h
src/: BarInterface.cxx  CardInterface.cxx
